# SKYGUARDIS

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  skyguardis.gpr
.github/workflows/: README.md  ci.yml  test-only.yml
docs/: ADA_TRADING_SYSTEM_ANALYSIS.md  COMPLETION_GUIDE.md  architecture.md  design_specification_v1.0.md  ethercat_frame_design.md  file_structure.md  requirements.md  requirements_v0.1.md
include/ada/ballistics/: ballistic_calculator.ads
include/ada/gun_control/: engagement_state_machine.ads
include/ada/safety_kernel/: safety_interlocks.ads
include/cpp/c2_controller/: c2_controller.hpp  threat_evaluator.hpp
include/cpp/logger/: logger.hpp  visualizer.hpp
include/cpp/message_gateway/: message_gateway.hpp  protocol.hpp
include/cpp/radar_simulator/: radar_simulator.hpp  scenario_manager.hpp  track_state.hpp
scripts/: build.sh
src/ada/: main_gun_control.adb
src/ada/ballistics/: ballistic_calculator.adb  ballistics.ads
src/ada/common/: common.ads  types.ads
src/ada/gun_control/: engagement_state_machine.adb  gun_control.ads
src/ada/message_handler/: message_handler.adb  message_handler.ads
src/ada/safety_kernel/: safety_interlocks.adb  safety_kernel.ads
src/cpp/: main_c2_node.cpp  main_radar_sim.cpp
src/cpp/c2_controller/: c2_controller.cpp  threat_evaluator.cpp
src/cpp/logger/: logger.cpp  visualizer.cpp
src/cpp/message_gateway/: message_gateway.cpp  protocol.cpp
src/cpp/radar_simulator/: radar_simulator.cpp  scenario_manager.cpp  track_generator.cpp
tests/ada/: test_ballistics.adb
tests/cpp/: CMakeLists.txt  test_ballistics_comprehensive.cpp  test_comprehensive_integration.cpp  test_logging.cpp  test_message_gateway.cpp  test_radar_simulation.cpp  test_safety_comprehensive.cpp  test_state_machine_integration.cpp  test_threat_evaluator.cpp  test_visualization.cpp
